--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "id": "org.nativescript.GoTrack",
     "tns-ios": {
       "version": "2.5.0"
+    },
+    "tns-android": {
+      "version": "2.5.0"
     }
   },
   "dependencies": {
@@ -26,6 +29,10 @@
     "tns-platform-declarations": "^2.5.0"
   },
   "devDependencies": {
+    "babel-traverse": "6.23.1",
+    "babel-types": "6.23.0",
+    "babylon": "6.16.1",
+    "lazy": "1.0.11",
     "nativescript-dev-android-snapshot": "^0.*.*",
     "nativescript-dev-typescript": "^0.3.5",
     "typescript": "~2.1.0",
